2004-08-06  Hiroyuki Ito <ZXB01226@nifty.com>

	* [w3m-dev 04097] Re: w3m-img gtk2
	* w3mimg/fb/fb_gdkpixbuf.c (draw): no need bg
		(get_animation_size): use GTimeVal
		(fb_image_load): use GTimeVal
				fix for animation
	* w3mimg/x11/x11_w3mimg.c (get_animation_size): use GTimeVal
		(x11_load_image): use GTimeVal
				fix for animation

2004-08-05  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 04096] w3m-img gtk2
	* acinclude.m4 (AC_W3M_IMAGE): add USE_GTK2
		add --with-imagelib=gtk2
	* aclocal.m4 config.guess config.sub configure: regen
	* config.h.in: add USE_GTK2
	* w3mimg/fb/fb_gdkpixbuf.c: support USE_GTK2
	* w3mimg/fb/fb_img.h: add fb_image_init()
	* w3mimg/fb/fb_imlib2.h: fb_image_init() stub
	* w3mimg/fb/fb_w3mimg.c: call fb_image_init()
	* w3mimg/x11/x11_w3mimg.c: support USE_GTK2

2004-08-03  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 04095] build fix when configure with --enable-messagel10n
	* main.c (main): locale and textdomain initialization if ENABLE_NLS
	* menu.c (initMenu): use _() instead of gettext()
	* rc.c (show_params): use _() instead of gettext()

2004-07-18  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 04094] Re: option panel: gettextize select list
	* rc.c (load_option_panel): don't gettext&wc_conv colorstr 
					several times

2004-07-16  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 04093] bookmark charset
	* add global variable: BookmarkCharset.
	* main.c:adBmark(): remove condition LANG = JA.
	* main.c: buffername encode by BookmarkCharset when add bookmark.
	* main.c: BookmarkCharset pass to w3mbookmark.
	* w3mbookmark.c: ditto.

2004-07-16  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 04092] remove __CYGWIN__ && LANG == JA
	* remove condition LANG == JA && __CYGWIN__
	* cygwin_mouse_btn_swapped enabled when before 1.5.x 

2004-07-16  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 04091] option panel: gettextize select list
	* rc.c: gettextize option select list.